# Dans_Prompter

./: AGENTS.md  PLAN.md  README.md  README_Codex_Improvements.md  pyproject.toml
src/dans_teleprompter/: __init__.py  __main__.py  app.py
src/dans_teleprompter/controller/: __init__.py  application.py  state.py
src/dans_teleprompter/input/: __init__.py  hotkeys.py
src/dans_teleprompter/scripts/: __init__.py  model.py  parser.py  presentation.py
src/dans_teleprompter/ui/: __init__.py  capture_exclusion.py  controls.py  geometry.py  overlay.py  script_view.py  tray.py
tests/: test_application_shell.py  test_constant_speed.py  test_geometry.py  test_hotkeys.py  test_overlay_behavior.py  test_parser.py  test_presentation.py
