[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dans-teleprompter"
version = "0.1.0"
description = "A Python teleprompter application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
    "pynput>=1.7,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
